# texteditor

./: .coverage  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MIT-LICENSE  Makefile  README.md  mm.py  publish.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tests.py  texteditor.py  tox.ini
tests/: test_texteditor.py
texteditor/: __init__.py  main.py  version.py
