[tool.poetry]
name = "Text-Editor"
version = "1.0.0"
description = "Like webbrowser, but for the text editor"
authors = [
    "Juan-Pablo Scaletti <juanpablo@jpscaletti.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/jpscaletti/texteditor"
repository = "https://github.com/jpscaletti/texteditor"
documentation = "https://github.com/jpscaletti/texteditor"

keywords = ["editor", "text editor", "webbrowser"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

packages = [
    { include = "texteditor.py" },
]

# Requirements
[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
tox = "^3.6"
