[metadata]
name = texteditor
version= 1.4
url = https://github.com/jpsca/texteditor
project_urls =
    Issue tracker = https://github.com/jpsca/texteditor/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
license = MIT
license_files = MIT-LICENSE
description = Like webbrowser, but for the text editor.
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
python_requires = >=3.5,<4.0
install_requires =


[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    flake8
    flake8-bugbear
    flake8-import-order
    flake8-logging-format
    flake8-quotes
    pytest
    pytest-cov

dev =
    mypy
    pre-commit
    tox


[flake8]
application-package-names = texteditor
application-import-names = texteditor
import-order-style = pycharm

select =
  B  # bugbear
  C  # mccabe, comprehensions, commas
  E  # pycodestyle errors
  F  # pyflakes
  G  # logging format
  I  # imports
  P,
  Q  # quotes
  T4  # mypy
  W  # pycodestyle warnings

ignore =
    W503  # line break before binary operator
    W504  # line break after binary operator
    E203  # whitespace before ':'
    E501  # line too long

max-line-length = 98
max-complexity = 10

inline-quotes = double
multiline-quotes = double
docstring-quotes = double

statistics = true
doctests = true
accept-encodings = utf-8

exclude =
  .git
  .venv
  __pycache__
  conftest.py


[tool:pytest]
addopts = --doctest-modules
